--- a/brochos/brochos/src/App.css
+++ b/brochos/brochos/src/App.css
@@ -40,6 +40,16 @@ img {
     height: 37%!important;
     width: 95%!important;
   }
+  .makeStyles-paper-2 {
+    max-width: 85px!important;
+    padding: 0px 20px 15px 0px!important;
+    padding-top: 0px !important;
+    padding-right: 20px !important;
+    padding-bottom: 15px !important;
+    padding-left: 0px !important;
+    font-size: revert!important;
+    height: 95px!important;
+  }
 }
 
 @media only screen and (max-width: 541px) {
@@ -51,12 +61,26 @@ img {
     height: 17%!important;
     width: 85%!important;
   }
+  .makeStyles-paper-2 {
+    padding: 0px 0px 0px 0px!important;
+    font-size: x-large!important;
+  }
 }
 
 @media only screen and (max-width: 376px) {
   .derech {
     height: 7%!important;
     width: 85%!important;
+  }
+  .MuiGrid-container {
+    max-width: 100%!important;
+    display: flex!important;
+    flex-wrap: nowrap!important;
+  }
+  .makeStyles-paper-2 {
+    padding: 0px 0px 6px 0px!important;
+    margin-left: 5px!important;
+    font-size: x-large!important;
   }
 }
 
@@ -73,6 +97,11 @@ img {
     height: 7%!important;
     width: 94%!important;
   }
+  .makeStyles-paper-2 {
+    max-width: fit-content;
+    height: 65px!important;
+    margin-right: 15px;
+  }
 }
 
 @media only screen and (max-width: 321px) {
@@ -88,6 +117,11 @@ img {
     height: 7%!important;
     width: 94%!important;
   }
+  .makeStyles-paper-2 {
+    max-width: fit-content;
+    padding: 0px 0px 5px 5px!important;
+    font-size: large;
+  }
 }
 
 @media only screen and (max-width: 281px) {
@@ -100,3 +134,25 @@ img {
     width: 85%!important;
   }
 }
+
+@media only screen and (max-width: 1025px) {
+  .makeStyles-paper-2 {
+    max-width: 85px!important;
+  }
+}
+
+@media only screen and (max-width: 361px) {
+  .makeStyles-paper-2 {
+    max-width: fit-content;
+    margin-right: 0px!important;
+    height: 65px!important;
+  }
+}
+
+/* @media only screen and (max-width: 280px) {
+  .makeStyles-paper-2 {
+    max-width: fit-content;
+    margin-right: 0px!important;
+    height: 65px!important;
+  }
+} */
