--- a/dvartorah/client/parsha/src/App.css
+++ b/dvartorah/client/parsha/src/App.css
@@ -24,6 +24,13 @@
   color: white;
 }
 
+.button Button{
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 25px;
+}
+
 .App-link {
   color: #61dafb;
 }
