--- a/brochos/brochos/src/App.css
+++ b/brochos/brochos/src/App.css
@@ -12,7 +12,7 @@
   color: red!important;
 }
 
-img {
+.bread {
   height: 20%!important;
   width: 98%!important;
 }
@@ -27,8 +27,13 @@ img {
   width: 90%!important;
 }
 
+img {
+  height: 54px !important;
+  width: 61px !important;
+}
+
 @media only screen and (max-width: 769px) {
-  img {
+  .bread {
     height: 10%!important;
     width: 95%!important;
   }
@@ -53,7 +58,7 @@ img {
 }
 
 @media only screen and (max-width: 541px) {
-  img {
+  .bread {
     height: 4%!important;
     width: 80%!important;
   }
@@ -85,7 +90,7 @@ img {
 }
 
 @media only screen and (max-width: 415px) {
-  img {
+  .bread {
     height: 3%!important;
     width: 75%!important;
   }
@@ -105,7 +110,7 @@ img {
 }
 
 @media only screen and (max-width: 321px) {
-  img {
+  .bread {
     height: 0%!important;
     width: 0%!important;
   }
@@ -125,7 +130,7 @@ img {
 }
 
 @media only screen and (max-width: 281px) {
-  img {
+  .bread {
     height: 0%!important;
     width: 0%!important;
   }
@@ -156,3 +161,29 @@ img {
     height: 65px!important;
   }
 } */
+
+@media (min-width: 0px) and (orientation: landscape) {
+  .MuiToolbar-regular {
+    min-height: 0px;
+    margin-bottom: 2px!important;
+    margin-top: 5px;
+  }
+}
+
+.MuiAppBar-root {
+  width: 95%;
+  right: 38px!important;
+  display: flex;
+  z-index: 1100;
+  box-sizing: border-box;
+  flex-shrink: 0;
+  flex-direction: column;
+  height: 12%;
+  position: none!important;
+}
+
+.MuiAppBar-positionFixed {
+  top: 0;
+  position: unset!important;
+  height: 55px;
+}
