--- a/brochos/brochos/src/App.css
+++ b/brochos/brochos/src/App.css
@@ -187,3 +187,9 @@ img {
   position: unset!important;
   height: 55px;
 }
+
+.MuiGrid-grid-xs-9 {
+  flex-grow: 0;
+  max-width: 78%;
+  flex-basis: 75%;
+}
