--- a/dvartorah/client/parsha/src/App.css
+++ b/dvartorah/client/parsha/src/App.css
@@ -1,10 +1,16 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.01071em;
+}
 .App {
   text-align: center;
+  margin-left: 3%;
+  margin-right: 3%
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
+  color: black;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -29,6 +35,11 @@
   margin-right: 10px;
   margin-top: 10px;
   margin-bottom: 25px;
+}
+
+.vort-text{
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .App-link {
